--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,5 +9,17 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <script>
+      console.group('%cDeveloped by', `color: blue; font-style: italic; font-size: 24px;`);
+      console.log(`%c
+  ██╗  ██╗ █████╗ ██████╗ ███████╗███████╗
+  ██║  ██║██╔══██╗██╔══██╗██╔════╝██╔════╝
+  ███████║███████║██║  ██║███████╗███████╗
+  ██╔══██║██╔══██║██║  ██║██╔════╝╚════██║
+  ██║  ██║██║  ██║██████╔╝███████╗███████║
+  ╚═╝  ╚═╝╚═╝  ╚═╝╚═════╝ ╚══════╝╚══════╝ `, `color: gray`);
+      console.groupEnd();
+    </script>
   </body>
 </html>
